--- a/backend/config/webhook-config.ini
+++ b/backend/config/webhook-config.ini
@@ -13,3 +13,6 @@ slack = event{type,user,text}::Slack $event.type$ from user $event.user$: "$even
 
 # AWS Events
 aws = detail-type,source,region,detail{instance-id,state}::AWS $detail-type$ from $source$ in $region$: Instance $detail.instance-id$ state: $detail.state$
+
+# Cisco Meraki Events
+meraki = alertType,deviceName,deviceSerial,networkName,networkUrl::MAJOR: Meraki $alertType$ on device $deviceName$ (Serial: $deviceSerial$) in network $networkName$
