Update webhook config with working production settings

--- a/backend/config/webhook-config.ini
+++ b/backend/config/webhook-config.ini
@@ -14,8 +14,11 @@ slack = event{type,user,text}::Slack $event.type$ from user $event.user$: "$even
 # AWS Events
 aws = detail-type,source,region,detail{instance-id,state}::AWS $detail-type$ from $source$ in $region$: Instance $detail.instance-id$ state: $detail.state$
 
-# Cisco Meraki Events
-meraki = alertType,deviceName,deviceSerial,networkName,networkUrl::MAJOR: Meraki $alertType$ on device $deviceName$ (Serial: $deviceSerial$) in network $networkName$
+#Cisco Meraki Events
+meraki = alertType,alertLevel,deviceName,deviceSerial,networkName,networkUrl:: Meraki $alertLevel$: $alertType$ on device $deviceName$ (Serial: $deviceSerial$) in network $networkName$
 
-# Gisual Location Alerts (with array support)
-gisual = locations{search_id},locations{asset_type},locations{asset_name},locations{asset_status}::MAJOR: Gisual Alert - Assets: $locations.asset_name$ | Types: $locations.asset_type$ | Status: $locations.asset_status$ | IDs: $locations.search_id$
+#Jira Events
+jira = issue{fields{summary}}, issue{fields{priority}},issue{fields{description}}::Jira $issue.fields.priority$ $issue.fields.summary$ : $issue.fields.description$
+
+#Gisual
+gisual = locations{search_id},locations{asset_type},locations{asset_name},locations{asset_status}::Gisual Alert - Assets: $locations.asset_name$ | Types: $locations.asset_type$ | Status: $locations.asset_status$ | IDs: $locations.search_id$
