Revert "fix: Update gisual webhook config to match actual payload structure"
This reverts commit ec1f17e180f6b0a20e66644fa3932db583d9c251.

--- a/backend/config/webhook-config.ini
+++ b/backend/config/webhook-config.ini
@@ -3,7 +3,7 @@ github = action,pull_request{title,user{login}},repository{name}::MAJOR: GitHub 
 aws = detail-type,source,region,detail{instance-id,state}::AWS $detail-type$ from $source$ in $region$: Instance $detail.instance-id$ state: $detail.state$
 meraki = alertType,alertLevel,deviceName,deviceSerial,networkName,networkUrl::Meraki $alertLevel$: $alertType$ on device $deviceName$ (Serial: $deviceSerial$) in network $networkName$
 jira = issue{fields{summary}}, issue{fields{priority}},issue{fields{description}}::Jira $issue.fields.priority$ $issue.fields.summary$ : $issue.fields.description$
-gisual = asset_name,power_status,search_id,incident_name,incident_url,num_affected,utility::Gisual Alert - $incident_name$ | Asset: $asset_name$ | Power: $power_status$ | Affected: $num_affected$ | Utility: $utility$ | ID: $search_id$ | Details: $incident_url$
+gisual = locations{search_id},locations{asset_type},locations{asset_name},locations{asset_status}::Gisual Alert - Assets: $locations.asset_name$ | Types: $locations.asset_type$ | Status: $locations.asset_status$ | IDs: $locations.search_id$
 slack = event{user},event{text}::Slack says: $event.user$  $event.text$
 stripe = data{object}{amount},data{object}{currency},data{object}{status}::$data.object.amount$$data.object.currency$$data.object.status$
 
