fix: Update SL1 GraphQL endpoint from /graphql to /gql
Based on working SL1 GraphQL code, the correct endpoint is /gql not /graphql.
This fixes the 404 error when trying to create Event Policies.

--- a/backend/config/app-config.ini
+++ b/backend/config/app-config.ini
@@ -33,7 +33,7 @@ log_file_name = payload.log
 
 [sl1_graphql]
 enabled = true
-endpoint = https://ec2-3-106-238-172.ap-southeast-2.compute.amazonaws.com/graphql
+endpoint = https://ec2-3-106-238-172.ap-southeast-2.compute.amazonaws.com/gql
 username = em7admin
 password = Ver33tiger
 timeout = 30
